Fix traveler icon alignment

--- a/main.css
+++ b/main.css
@@ -110,8 +110,8 @@ html, body {overscroll-behavior: none;}
 .token_visibility_pip {width: 35%; height: 35%; position: absolute; right: 25px; bottom: 25px; pointer-events: none; display: none;}
 .role_token[visibility="hide"] .token_visibility_pip {display: inherit; background-image: url(assets/visibility_off_red.png);}
 .role_token[visibility="bluff"] .token_visibility_pip {display: inherit; background-image: url(assets/visibility_off_yellow.png);}
-.token_oursider_betray {width: 80%; height: 80%; position: absolute; top: -15px; left: -15px; pointer-events: none; display: none;}
-#body_actual[night="true"] .token_oursider_betray {display: inherit;}
+.token_outsider_betray {width: 80%; height: 80%; position: absolute; top: 15px; left: 15px; pointer-events: none; display: none;}
+#body_actual[night="true"] .token_outsider_betray {display: inherit;}
 
 #nightorder_button_container {position: absolute; top: 0px; right: 0px; width: 400px; height: 45px; display: inline-block; display: flex;}
 .night_select {width: 100px; display: block; height: 41px; text-align: center; font-family: PiratesBay; font-size: 28pt; border: black 2px solid; background-image: url("assets/vines.png"); color: #afafaf; cursor: pointer; user-select: none;}
